--- a/ChooseModePage.html
+++ b/ChooseModePage.html
@@ -25,22 +25,22 @@
 
         <h6 id="SinglePlayer">Single Player</h6>
 
-        <img id="ApplePic" src='Apple.png'/>
+        <img id="ApplePic" src='Assets/Apple.png'/>
 
         <h6 id="Multiplayer">Multiplayer</h6>
 
         <div>
-            <img id="AppleMulti" src='AppleMulti-07.jpg'/>
+            <img id="AppleMulti" src='Assets/AppleMulti-07.jpg'/>
 
-            <img id="AppleReverse" src='AppleReverse-07.jpg'/>
+            <img id="AppleReverse" src='Assets/AppleReverse-07.jpg'/>
         </div>
 
         <h6 id="Blitz">Blitz</h6>
 
         <div>
-            <img id="AppleBlitz" src='AppleMulti-07.jpg'/>
-            <img id="Cherry" src='Cherry.jpg'/>
-            <img id="Lemon" src='Lemon.jpg'/>
+            <img id="AppleBlitz" src='Assets/AppleMulti-07.jpg'/>
+            <img id="Cherry" src='Assets/Cherry.jpg'/>
+            <img id="Lemon" src='Assets/Lemon.jpg'/>
         </div>
        
     </div>
