--- a/wwwroot/SignUpPage.html
+++ b/wwwroot/SignUpPage.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta >
     <title>Clicker</title>
+    <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="SignUpPageStyle.css">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <link rel="stylesheet" href="node_modules/getmdl-select/getmdl-select.min.css">
