--- a/wwwroot/SinglePlayerPage.html
+++ b/wwwroot/SinglePlayerPage.html
@@ -29,6 +29,21 @@
                 <h1 class="headtext">Single Player</h1>
             </div>
         </header>
+        <script>
+          function openNav()
+          {
+            document.getElementById('centralmenu').style.display = "block";
+          }
+          function closeNav()
+          {
+            document.getElementById('centralmenu').style.display = "none";
+          }
+        </script>
+
+        <div class="centralmenu" id="centralmenu" style="display: none;">
+          <h1 class="continueSinglePage" onclick="closeNav()">Continue</h1>
+          <h1 class="saveSinglePage" onclick='location.href="ChooseModePage.html"'>Save & Exit</h1>
+        </div>
 
         <div class="scorecontainer">
             <h1 class="score">00</h1>
