--- a/wwwroot/MultiplayerPage.html
+++ b/wwwroot/MultiplayerPage.html
@@ -35,6 +35,15 @@
             <h1 class="saveMultiPage" onclick='location.href="ChooseModePage.html"'>Save & Exit</h1>
           </div>
 
+          <div class="erroralert" id="erroralert" style="display: none;">
+            <h1 class="losetext" id="losetext" style="display: none;">You Lose!</h1> 
+            <h1 class="resulttext">Result</h1>
+            <h1 class="scoretext" id="scoretext"></h1>
+            <button id="matbtnOK" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick='location.href="ChooseModePage.html"'>
+                OK
+            </button>
+        </div>
+
         <div class="playernamecontainer">
             <p class="playername">Player 1</p>
         </div>
@@ -62,18 +71,35 @@
                 count++;
                 if(count > timeInterval)
                 {
+                    ErrorAlert();
                     clearInterval(interval);
                     return;
                 }
             };
             var interval = setInterval(x,1000);
+
+            function ErrorAlert()
+            {
+                document.getElementById("erroralert").style.display = "block";
+                time = 50000;
+                document.getElementById("scoretext").innerHTML = document.getElementById("score").innerHTML;
+            };
+
+            function onAppleClick()
+            {
+                var value = parseInt(document.getElementById('score').innerHTML);
+                value = isNaN(value) ? 0 : value;
+                value++;
+                document.getElementById("score").innerHTML = value;
+            }
+
         </script>
 
         <div class="scorecontainer">
-            <h1 class="score">00</h1>
+            <h1 class="score" id="score"></h1>
         </div>
 
-        <div class="clickablezone">
+        <div class="clickablezone" onclick="onAppleClick()">
             <button style="width: 100%; height: 100%; background: transparent; border: none; outline: none;">
             <img id="ApplePic" src='Assets/Apple.png' />
             </button>
