--- a/wwwroot/MultiplayerPage.html
+++ b/wwwroot/MultiplayerPage.html
@@ -61,6 +61,9 @@
         <div class="resultall" id="resultall" style="display: none;">
             <h1 class="res" id="res">Result all</h1>
             <div id="resultscoreall"></div>
+            <button id="matbtnback" value="0" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="location.href='ChooseModePage.html'">
+                OK
+            </button>
         </div>
 
         <div class="clickablezone" onclick="onAppleClick()">
